# OpenGeodeWeb-Microservice

./: .gitignore  README.md  generate_pyinstaller.js  generate_schemas.js  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: deploy.yml  test.yml  test_pr.yml
src/opengeodeweb_microservice/: app_config.py
src/opengeodeweb_microservice/database/: connection.py  data.py  data_types.py  session.py
src/opengeodeweb_microservice/microservice/: data.py
tests/: conftest.py  test_connection.py  test_database.py
